--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   carousel_slider: ^4.2.1
   flutter_screenutil: ^5.9.0
+  flutter_popup: ^3.3.0
+  flutter_popup_card: ^0.0.5
 
 dev_dependencies:
   flutter_test:
