--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   flutter_screenutil: ^5.9.0
   flutter_popup: ^3.3.0
   flutter_popup_card: ^0.0.5
+  flame: ^1.15.0
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
